--- a/Compubuilt/appsettings.json
+++ b/Compubuilt/appsettings.json
@@ -1,5 +1,5 @@
 {
-/*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform 
@@ -17,5 +17,10 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "DefaultConnection": "Server=.\\\\BARTEK-WINDOWS\\SQLEXPRESS;Database=compubuilt;Trusted_Connection=True;"
+
+  }
 }
