--- a/Compubuilt/appsettings.json
+++ b/Compubuilt/appsettings.json
@@ -11,16 +11,16 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "ClientId": "11111111-1111-1111-11111111111111111",
     "CallbackPath": "/signin-oidc"
   },
+  "ConnectionStrings": {
+
+    "DefaultConnection": "Server=BARTEK-WINDOWS\\SQLEXPRESS;Database=compubuilt;Trusted_Connection=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-
-    "DefaultConnection": "Server=.\\\\BARTEK-WINDOWS\\SQLEXPRESS;Database=compubuilt;Trusted_Connection=True;"
-
-  }
+  "AllowedHosts": "*"
 }
