Added swagger, ProductApi

--- a/Compubuilt/Compubuilt.csproj
+++ b/Compubuilt/Compubuilt.csproj
@@ -24,13 +24,13 @@
     <PackageReference Include="Microsoft.Identity.Web" Version="1.25.0" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.25.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.6" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="ViewComponents\" />
     <Folder Include="ViewComponents\" />
-    <Folder Include="Views\Shared\Components\" />
-    <Folder Include="Views\Shared\Components\" />
+    <Folder Include="Views\Shared\Components\FeaturedProducts\" />
   </ItemGroup>
 
 </Project>
