Added logging with Azure AD, added filters to product catalog,

--- a/Compubuilt/appsettings.json
+++ b/Compubuilt/appsettings.json
@@ -6,9 +6,9 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
 */
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "qualified.domain.name",
-    "TenantId": "22222222-2222-2222-2222-222222222222",
-    "ClientId": "11111111-1111-1111-11111111111111111",
+    "Domain": "WITCBSGEDU.onmicrosoft.com",
+    "TenantId": "7c603ac2-9219-43a5-8384-94c39e68e5cb",
+    "ClientId": "b5d6a151-0a3f-4e46-9367-2f7e4c815025",
     "CallbackPath": "/signin-oidc"
   },
   "ConnectionStrings": {
@@ -24,3 +24,6 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   },
   "AllowedHosts": "*"
 }
+
+
+
